spacing fix on input field

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -169,7 +169,7 @@ a {
 }
 
 .remove-task-button {
-  border: 1px #252525 solid;
+  border: 1px #252525 inset;
   padding: 0;
   margin: 0;
   width: 20px;
@@ -244,14 +244,16 @@ a {
 }
 
 .new-task-title {
-  font-size: medium;
-  margin-bottom: 5px;
+  /* font-size: medium; */
   padding-left: 5px;
+  height: 20px;
 }
 
 .new-task input {
   border: 0;
   font-family: inherit;
+  padding: 0;
+  padding-left: 5px;
 }
 
 .flex-row-at-start {
